# inverse-code

./: .pylintrc  .pypirc  README.md  pyproject.toml  setup.cfg  setup.py
inverse_code/: INVERSE_CODE.md  __init__.py  decode.py  encode.py  error.py  showascii.py
inverse_code/ascii/: ASCII.md  asciitable.py  win1252.py
inverse_code/convert/: cdec.py  chex.py  coct.py
inverse_code/helpers/: HELPERS.md  octshow.py  symbshow.py
tests/: a.py  test_bin.py  test_bin_0_1.py  test_cbin.py  test_cdec.py  test_chex.py  test_coct.py  test_convert_dec.py  test_convert_oct.py  test_csymb.py  test_dec.py  test_dec_0_255.py  test_decode.py  test_encode.py  test_helpers_all_ascii_table.py  test_helpers_bin.py  test_helpers_bin_0_1.py  test_helpers_dec.py  test_helpers_hex.py  test_helpers_hex_0_ff.py  test_helpers_oct.py  test_helpers_oct_0_377.py  test_helpers_symb.py  test_helpers_symb_32_127.py  test_hex.py  test_hex_00_ff.py  test_oct.py  test_oct_000_037.py  test_sybol_32_127.py  test_sym.py  test_symbol.py  test_win1252.py
tests/convert/: test_convert_bin.py  test_convert_dec.py  test_convert_symb.py
tests/test_ascii/: test_dec_0_255.py  test_hex_00_ff.py  test_oct_000_377.py  test_sybol_32_127.py
tests/test_convert/: test_convert_hex.py  test_convert_oct.py
tests/test_helpers/: test_helpers_dec_0_255.py  test_helpers_oct_0_377.py  test_helpers_symb_32_127.py
