[metadata]

name = inverse_code
version = 2025.0.3
author = Aniceto Jolela
author_email = otecina500@gmail.com
description = Reverse Code is a library created for Python to help developers encrypt and retrieve their data in a simple way.
long_description = file: README.md, INVERSE_CODE.md, HELPERS.md, ASCII.md, CONVERT.md
keywords = inverse-code, inverse_code, code, ascii, convert, helpers, decode, encode, win1252, asciitable, binary, bin, dec, hex, oct, unittest, test, pylintrc, yield, readme, library
long_description_content_type = text/markdown
url = https://github.com/aniceto-jolela/inverse-code
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = inverse_code.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3




